Replace a deprecated constructor